# sysinfo

./: Cargo.toml
src/: ascii_art.rs  main.rs
