[package]
name = "sysinfo"
version = "0.1.0"
authors = ["Anthony Lannutti <lannuttia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0" # from crates.io
sysinfo = "0.9.1"
os_type = "2.2.0"
itertools = "0.8.0"
